--- a/saas-development.html
+++ b/saas-development.html
@@ -90,72 +90,53 @@
                     <div class="row">
                         <div class="col">
                             <!-- Navbar -->
-                            <nav class="navbar navbar-expand-lg">
+                            <nav class="navbar navbar-expand-lg" aria-label="Main Navigation">
                                 <a class="navbar-brand logo" href="index.html">
-                                    <span>Aang</span>Software.
+                                    <span>Aang</span>Software
+                                    <!-- <img class="img-fluid rounded" src="images/logo.webp" alt="AangSoftware - Custom Software Development Company" /> -->
                                 </a>
                                 <button class="navbar-toggler ht-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <svg width="100" height="100" viewBox="0 0 100 100">
-                <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path>
-                <path class="line line2" d="M 20,50 H 80"></path>
-                <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path>
-              </svg>
-            </button>
+                            <svg width="100" height="100" viewBox="0 0 100 100">
+                                <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path>
+                                <path class="line line2" d="M 20,50 H 80"></path>
+                                <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path>
+                            </svg>
+                        </button>
                                 <div class="collapse navbar-collapse" id="navbarNav">
                                     <!-- Left nav -->
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
-                                        <li class="nav-item ">
-                                            <a class="nav-link active " href="index.html">Home</a>
-
+                                        <li class="nav-item">
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
-                                        <li class="nav-item ">
-                                            <a class="nav-link " href="about-us.html">About Us</a>
-
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
                                         </li>
-
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="custom-software-development.html">Custom Software Development</a>
-                                                </li>
-                                                <li>
-                                                    <a href="web-mobileapp-development.html">Web and Mobile App Development</a>
-                                                </li>
-                                                <li>
-                                                    <a href="Enterprise-software-development.html">Enterprise Software Solutions</a>
-                                                </li>
-                                                <li> <a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
-                                                <li> <a href="api-development-integration.html">API Development and Integration</a></li>
-                                                <li> <a href="ux-ui-development.html">UX/UI Design</a></li>
-                                                <li> <a href="software-maintenance-and-Support.html">Software Maintenance and Support</a></li>
+                                            <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                                            <ul class="dropdown-menu" aria-label="Services">
+                                                <li><a href="custom-software-development.html">Custom Software Development</a></li>
+                                                <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
+                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
+                                                <li><a href="api-development-integration.html">API Development and Integration</a></li>
+                                                <li><a href="ux-ui-development.html">UX/UI Design</a></li>
+                                                <li><a href="software-maintenance-and-Support.html">Software Maintenance and Support</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Products</a>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="services.html">School Management Software</a>
-                                                </li>
-                                                <li>
-                                                    <a href="services-2.html">Hospital Management Software</a>
-                                                </li>
-                                                <li>
-                                                    <a href="services-single.html">Coaching CRM</a>
-                                                </li>
-
+                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                                            <ul class="dropdown-menu" aria-label="Products">
+                                                <li><a href="school-management-software.html">School Management Software</a></li>
+                                                <li><a href="hospital-management-software.html">Hospital Management Software</a></li>
+                                                <li><a href="coaching-crm.html">Coaching CRM</a></li>
                                             </ul>
                                         </li>
-
-
-                                        <li class="nav-item ">
-                                            <a class="nav-link " href="contact.html">Contact</a>
-
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="contact.html" aria-label="Contact AangSoftware">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
-                                <!-- <a class="themeht-btn dark-btn" href="#">Buy Now</a> -->
                             </nav>
                         </div>
                     </div>
@@ -370,92 +351,74 @@
 
         <!--footer start-->
 
-        <footer class="footer" data-bg-img="images/bg/02.png">
-            <div class="container">
+        <footer class="footer" data-bg-img="images/bg/02.png" aria-labelledby="footer-title" style="    margin-top: 89px;">
+            <div class="container" style="margin-top: -11rem;">
                 <div class="primary-footer">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
-                            <h5>Get In Touch</h5>
+                            <h5 id="footer-title">Get In Touch</h5>
                             <ul class="media-icon list-unstyled mb-8">
                                 <li>
-                                    <p class="mb-0">Innovation Hub, 4th Floor, Tech Park, Bengaluru, India</p>
+                                    <p class="mb-0"> Bhagalpur, Bihar, India</p>
                                 </li>
                                 <li>
                                     <a href="mailto:contact@aangsoftware.com">contact@aangsoftware.com</a>
                                 </li>
                                 <li>
-                                    <a href="tel:+911234567890">+91-123-456-7890</a>
+                                    <a href="tel:+918709365153">+91-8709365153</a>
                                 </li>
                             </ul>
                             <h5>Follow Us</h5>
                             <ul class="list-inline ps-0 ms-0 footer-social">
                                 <li class="list-inline-item">
-                                    <a href="https://facebook.com/aangsoftware">
+                                    <a href="https://facebook.com/aangsoftware" aria-label="Facebook">
                                         <i class="bi bi-facebook"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://dribbble.com/aangsoftware">
+                                    <a href="https://dribbble.com/aangsoftware" aria-label="Dribbble">
                                         <i class="bi bi-dribbble"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://instagram.com/aangsoftware">
+                                    <a href="https://instagram.com/aangsoftware" aria-label="Instagram">
                                         <i class="bi bi-instagram"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://twitter.com/aangsoftware">
+                                    <a href="https://twitter.com/aangsoftware" aria-label="Twitter">
                                         <i class="bi bi-twitter"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://linkedin.com/company/aangsoftware">
+                                    <a href="https://linkedin.com/company/aangsoftware" aria-label="LinkedIn">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0">
+                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -11rem;">
                             <h5>Information</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="about-us.html">About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="services.html">Services</a>
-                                        </li>
-                                        <li>
-                                            <a href="team.html">Our Team</a>
-                                        </li>
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="team.html">Our Team</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="blog.html">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="portfolio.html">Portfolio</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact Us</a>
-                                        </li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled">
-                                        <li>
-                                            <a href="faq.html">FAQ</a>
-                                        </li>
-                                        <li>
-                                            <a href="privacy-policy.html">Privacy Policy</a>
-                                        </li>
-                                        <li>
-                                            <a href="terms-and-conditions.html">Terms & Conditions</a>
-                                        </li>
+                                        <li><a href="faq.html">FAQ</a></li>
+                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                        <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -463,8 +426,8 @@
                                 <div class="col-md-10">
                                     <h5>Subscribe to Our Newsletter</h5>
                                     <div class="subscribe-form">
-                                        <form id="mc-form" class="mc-form">
-                                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required="">
+                                        <form id="mc-form" class="mc-form" role="form" aria-labelledby="subscribe-title">
+                                            <input type="email" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required>
                                             <input class="subscribe-btn" type="submit" name="subscribe" value="Subscribe Now">
                                         </form>
                                     </div>
@@ -478,7 +441,9 @@
                 <div class="container">
                     <div class="copyright">
                         <div class="row text-center">
-                            <div class="col">© 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u></div>
+                            <div class="col">
+                                © 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u>
+                            </div>
                         </div>
                     </div>
                 </div>
