--- a/about-us.html
+++ b/about-us.html
@@ -89,9 +89,10 @@
                     <div class="row">
                         <div class="col">
                             <!-- Navbar -->
-                            <nav class="navbar navbar-expand-lg">
+                            <nav class="navbar navbar-expand-lg" aria-label="Main Navigation">
                                 <a class="navbar-brand logo" href="index.html">
-                                    <span>Aang</span>Software.
+                                    <span>Aang</span>Software
+                                    <!-- <img class="img-fluid rounded" src="images/logo.webp" alt="AangSoftware - Custom Software Development Company" /> -->
                                 </a>
                                 <button class="navbar-toggler ht-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <svg width="100" height="100" viewBox="0 0 100 100">
@@ -105,33 +106,33 @@
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
                                         <li class="nav-item">
-                                            <a class="nav-link " href="index.html">Home</a>
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
-                                        <li class="nav-item ">
-                                            <a class="nav-link active" href="about-us.html">About Us</a>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="about-us.html" aria-label="About AangSoftware">About Us</a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="services.html">Custom Software Development</a></li>
-                                                <li><a href="services-2.html">Web and Mobile App Development</a></li>
-                                                <li><a href="services-single.html">Enterprise Software Solutions</a></li>
-                                                <li><a href="services-saas.html">SaaS (Software as a Service) Development</a></li>
-                                                <li><a href="services-api.html">API Development and Integration</a></li>
-                                                <li><a href="services-ux-ui.html">UX/UI Design</a></li>
-                                                <li><a href="services-maintenance.html">Software Maintenance and Support</a></li>
+                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                                            <ul class="dropdown-menu" aria-label="Services">
+                                                <li><a href="custom-software-development.html">Custom Software Development</a></li>
+                                                <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
+                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
+                                                <li><a href="api-development-integration.html">API Development and Integration</a></li>
+                                                <li><a href="ux-ui-development.html">UX/UI Design</a></li>
+                                                <li><a href="software-maintenance-and-support.html">Software Maintenance and Support</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Products</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="product-school-management.html">School Management Software</a></li>
-                                                <li><a href="product-hospital-management.html">Hospital Management Software</a></li>
-                                                <li><a href="product-coaching-crm.html">Coaching CRM</a></li>
+                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                                            <ul class="dropdown-menu" aria-label="Products">
+                                                <li><a href="school-management-software.html">School Management Software</a></li>
+                                                <li><a href="hospital-management-software.html">Hospital Management Software</a></li>
+                                                <li><a href="coaching-crm.html">Coaching CRM</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="contact.html">Contact</a>
+                                            <a class="nav-link" href="contact.html" aria-label="Contact AangSoftware">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -141,7 +142,6 @@
                 </div>
             </div>
         </header>
-
 
         <!--header end-->
 
@@ -195,7 +195,8 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-12">
-                            <img class="img-fluid" src="images/about/03.png" alt="About AangSoftware">
+                            <img class="img-fluid" src="images/about/03.png" alt="About AangSoftware" style="    margin-top: -111px;
+">
                         </div>
                         <div class="col-lg-6 col-md-12 mt-6 mt-lg-0 ps-lg-10">
                             <div class="theme-title mb-4">
@@ -215,30 +216,7 @@
             <!--marquee start-->
 
 
-            <section class="overflow-hidden p-0">
-                <div class="container-fluid p-0">
-                    <div class="row">
-                        <div class="col">
-                            <div class="marquee-wrap">
-                                <div class="marquee-text">
-                                    <span>Custom Software Solutions</span>
-                                    <i class="bi bi-dot"></i>
-                                    <span>CRM Solutions for Businesses</span>
-                                    <i class="bi bi-dot"></i>
-                                    <span>Transform Your Business with Technology</span>
-                                    <i class="bi bi-dot"></i>
-                                    <span>Innovative Software for Growth</span>
-                                    <i class="bi bi-dot"></i>
-                                    <span>Trusted Partner for Startups & Enterprises</span>
-                                    <i class="bi bi-dot"></i>
-                                    <span>Expert CRM & Software Development</span>
-                                    <i class="bi bi-dot"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+
 
 
             <!--marquee end-->
@@ -250,7 +228,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
-                            <div class="featured-item style-1">
+                            <div class="featured-item style-1" style="margin-top: -241px;">
                                 <div class="featured-icon">
                                     <img class="img-fluid" src="images/feature/01.png" alt="Digital Design">
                                 </div>
@@ -322,92 +300,74 @@
         <!--footer start-->
 
 
-        <footer class="footer" data-bg-img="images/bg/02.png">
-            <div class="container">
+        <footer class="footer" data-bg-img="images/bg/02.png" aria-labelledby="footer-title" style="    margin-top: 89px;">
+            <div class="container" style="margin-top: -11rem;">
                 <div class="primary-footer">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
-                            <h5>Get In Touch</h5>
+                            <h5 id="footer-title">Get In Touch</h5>
                             <ul class="media-icon list-unstyled mb-8">
                                 <li>
-                                    <p class="mb-0">Innovation Hub, 4th Floor, Tech Park, Bengaluru, India</p>
+                                    <p class="mb-0"> Bhagalpur, Bihar, India</p>
                                 </li>
                                 <li>
                                     <a href="mailto:contact@aangsoftware.com">contact@aangsoftware.com</a>
                                 </li>
                                 <li>
-                                    <a href="tel:+911234567890">+91-123-456-7890</a>
+                                    <a href="tel:+918709365153">+91-8709365153</a>
                                 </li>
                             </ul>
                             <h5>Follow Us</h5>
                             <ul class="list-inline ps-0 ms-0 footer-social">
                                 <li class="list-inline-item">
-                                    <a href="https://facebook.com/aangsoftware">
+                                    <a href="https://facebook.com/aangsoftware" aria-label="Facebook">
                                         <i class="bi bi-facebook"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://dribbble.com/aangsoftware">
+                                    <a href="https://dribbble.com/aangsoftware" aria-label="Dribbble">
                                         <i class="bi bi-dribbble"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://instagram.com/aangsoftware">
+                                    <a href="https://instagram.com/aangsoftware" aria-label="Instagram">
                                         <i class="bi bi-instagram"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://twitter.com/aangsoftware">
+                                    <a href="https://twitter.com/aangsoftware" aria-label="Twitter">
                                         <i class="bi bi-twitter"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://linkedin.com/company/aangsoftware">
+                                    <a href="https://linkedin.com/company/aangsoftware" aria-label="LinkedIn">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0">
+                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -11rem;">
                             <h5>Information</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="about-us.html">About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="services.html">Services</a>
-                                        </li>
-                                        <li>
-                                            <a href="team.html">Our Team</a>
-                                        </li>
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="team.html">Our Team</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="blog.html">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="portfolio.html">Portfolio</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact Us</a>
-                                        </li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled">
-                                        <li>
-                                            <a href="faq.html">FAQ</a>
-                                        </li>
-                                        <li>
-                                            <a href="privacy-policy.html">Privacy Policy</a>
-                                        </li>
-                                        <li>
-                                            <a href="terms-and-conditions.html">Terms & Conditions</a>
-                                        </li>
+                                        <li><a href="faq.html">FAQ</a></li>
+                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                        <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -415,8 +375,8 @@
                                 <div class="col-md-10">
                                     <h5>Subscribe to Our Newsletter</h5>
                                     <div class="subscribe-form">
-                                        <form id="mc-form" class="mc-form">
-                                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required="">
+                                        <form id="mc-form" class="mc-form" role="form" aria-labelledby="subscribe-title">
+                                            <input type="email" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required>
                                             <input class="subscribe-btn" type="submit" name="subscribe" value="Subscribe Now">
                                         </form>
                                     </div>
@@ -430,7 +390,9 @@
                 <div class="container">
                     <div class="copyright">
                         <div class="row text-center">
-                            <div class="col">© 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u></div>
+                            <div class="col">
+                                © 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u>
+                            </div>
                         </div>
                     </div>
                 </div>
