--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,10 @@
                     <div class="row">
                         <div class="col">
                             <!-- Navbar -->
-                            <nav class="navbar navbar-expand-lg">
+                            <nav class="navbar navbar-expand-lg" aria-label="Main Navigation">
                                 <a class="navbar-brand logo" href="index.html">
-                                    <span>Aang</span>Software.
+                                    <span>Aang</span>Software
+                                    <!-- <img class="img-fluid rounded" src="images/logo.webp" alt="AangSoftware - Custom Software Development Company" /> -->
                                 </a>
                                 <button class="navbar-toggler ht-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <svg width="100" height="100" viewBox="0 0 100 100">
@@ -104,33 +105,33 @@
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="index.html">Home</a>
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="about-us.html">About Us</a>
+                                            <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="services.html">Custom Software Development</a></li>
-                                                <li><a href="services-2.html">Web and Mobile App Development</a></li>
-                                                <li><a href="services-single.html">Enterprise Software Solutions</a></li>
-                                                <li><a href="services-saas.html">SaaS (Software as a Service) Development</a></li>
-                                                <li><a href="services-api.html">API Development and Integration</a></li>
-                                                <li><a href="services-ux-ui.html">UX/UI Design</a></li>
-                                                <li><a href="services-maintenance.html">Software Maintenance and Support</a></li>
+                                            <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                                            <ul class="dropdown-menu" aria-label="Services">
+                                                <li><a href="custom-software-development.html">Custom Software Development</a></li>
+                                                <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
+                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
+                                                <li><a href="api-development-integration.html">API Development and Integration</a></li>
+                                                <li><a href="ux-ui-development.html">UX/UI Design</a></li>
+                                                <li><a href="software-maintenance-and-Support.html">Software Maintenance and Support</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Products</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="product-school-management.html">School Management Software</a></li>
-                                                <li><a href="product-hospital-management.html">Hospital Management Software</a></li>
-                                                <li><a href="product-coaching-crm.html">Coaching CRM</a></li>
+                                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                                            <ul class="dropdown-menu" aria-label="Products">
+                                                <li><a href="school-management-software.html">School Management Software</a></li>
+                                                <li><a href="hospital-management-software.html">Hospital Management Software</a></li>
+                                                <li><a href="coaching-crm.html">Coaching CRM</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="contact.html">Contact</a>
+                                            <a class="nav-link active" href="contact.html" aria-label="Contact AangSoftware">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -193,7 +194,7 @@
                 <div class="container">
                     <div class="row gx-lg-5 align-items-center">
                         <div class="col-lg-4 col-md-12">
-                            <div class="contact-media"> <i class="flaticon flaticon-office"></i><span>Address:</span>
+                            <div class="contact-media" style="margin-top: -153px;"> <i class="flaticon flaticon-office"></i><span>Address:</span>
                                 <p>5th Street, 21st Floor, New York, USA </p>
                             </div>
                         </div>
@@ -273,7 +274,7 @@
         </form>
       </div>
     </div> -->
-                    <section>
+                    <!-- <section>
                         <div class="container">
                             <div class="row justify-content-center text-center">
                                 <div class="col-lg-8 col-md-12">
@@ -323,22 +324,22 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
 
-                    <!-- <div class="row align-items-center">
+                    <div class="row align-items-center">
                         <div class="col-lg-5 me-auto">
                             <img class="img-fluid" src="images/contact-img.png" alt="">
                         </div>
                         <div class="col-lg-6 mt-7 mt-lg-0">
                             <h3>Contact Us</h3>
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfuSvZuTbFY6SsI-2rYR0rKRs4KWJP8WBf1QjWgNACa0XtiCA/viewform?usp=sf_link" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        </div> -->
-                    <!-- </div> -->
+                        </div>
+                    </div>
 
                 </div>
             </section>
 
-            <section class="overflow-hidden p-0">
+            <section class="overflow-hidden p-0" style="margin-top: -131px;">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center">
                         <div class="col-md-12">
@@ -364,92 +365,74 @@
 
         <!--footer start-->
 
-        <footer class="footer" data-bg-img="images/bg/02.png">
-            <div class="container">
+        <footer class="footer" data-bg-img="images/bg/02.png" aria-labelledby="footer-title" style="    margin-top: 89px;">
+            <div class="container" style="margin-top: -11rem;">
                 <div class="primary-footer">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
-                            <h5>Get In Touch</h5>
+                            <h5 id="footer-title">Get In Touch</h5>
                             <ul class="media-icon list-unstyled mb-8">
                                 <li>
-                                    <p class="mb-0">Innovation Hub, 4th Floor, Tech Park, Bengaluru, India</p>
+                                    <p class="mb-0"> Bhagalpur, Bihar, India</p>
                                 </li>
                                 <li>
                                     <a href="mailto:contact@aangsoftware.com">contact@aangsoftware.com</a>
                                 </li>
                                 <li>
-                                    <a href="tel:+911234567890">+91-123-456-7890</a>
+                                    <a href="tel:+918709365153">+91-8709365153</a>
                                 </li>
                             </ul>
                             <h5>Follow Us</h5>
                             <ul class="list-inline ps-0 ms-0 footer-social">
                                 <li class="list-inline-item">
-                                    <a href="https://facebook.com/aangsoftware">
+                                    <a href="https://facebook.com/aangsoftware" aria-label="Facebook">
                                         <i class="bi bi-facebook"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://dribbble.com/aangsoftware">
+                                    <a href="https://dribbble.com/aangsoftware" aria-label="Dribbble">
                                         <i class="bi bi-dribbble"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://instagram.com/aangsoftware">
+                                    <a href="https://instagram.com/aangsoftware" aria-label="Instagram">
                                         <i class="bi bi-instagram"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://twitter.com/aangsoftware">
+                                    <a href="https://twitter.com/aangsoftware" aria-label="Twitter">
                                         <i class="bi bi-twitter"></i>
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://linkedin.com/company/aangsoftware">
+                                    <a href="https://linkedin.com/company/aangsoftware" aria-label="LinkedIn">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0">
+                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -11rem;">
                             <h5>Information</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="about-us.html">About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="services.html">Services</a>
-                                        </li>
-                                        <li>
-                                            <a href="team.html">Our Team</a>
-                                        </li>
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="team.html">Our Team</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled w-100">
-                                        <li>
-                                            <a href="blog.html">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="portfolio.html">Portfolio</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact Us</a>
-                                        </li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
                                     <ul class="list-unstyled">
-                                        <li>
-                                            <a href="faq.html">FAQ</a>
-                                        </li>
-                                        <li>
-                                            <a href="privacy-policy.html">Privacy Policy</a>
-                                        </li>
-                                        <li>
-                                            <a href="terms-and-conditions.html">Terms & Conditions</a>
-                                        </li>
+                                        <li><a href="faq.html">FAQ</a></li>
+                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                        <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -457,8 +440,8 @@
                                 <div class="col-md-10">
                                     <h5>Subscribe to Our Newsletter</h5>
                                     <div class="subscribe-form">
-                                        <form id="mc-form" class="mc-form">
-                                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required="">
+                                        <form id="mc-form" class="mc-form" role="form" aria-labelledby="subscribe-title">
+                                            <input type="email" name="EMAIL" class="email" id="mc-email" placeholder="Your Email Address" required>
                                             <input class="subscribe-btn" type="submit" name="subscribe" value="Subscribe Now">
                                         </form>
                                     </div>
@@ -472,7 +455,9 @@
                 <div class="container">
                     <div class="copyright">
                         <div class="row text-center">
-                            <div class="col">© 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u></div>
+                            <div class="col">
+                                © 2024 AangSoftware | All Rights Reserved | Powered by <u><a href="https://aangsoftware.com">AangSoftware</a></u>
+                            </div>
                         </div>
                     </div>
                 </div>
