--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                                             <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                                            <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                                             <ul class="dropdown-menu" aria-label="Services">
                                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
                                                 <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
