--- a/about-us.html
+++ b/about-us.html
@@ -116,19 +116,19 @@
                                             <ul class="dropdown-menu" aria-label="Services">
                                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
                                                 <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
-                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="Enterprise-software-development.html">Enterprise Software Solutions</a></li>
                                                 <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
                                                 <li><a href="api-development-integration.html">API Development and Integration</a></li>
                                                 <li><a href="ux-ui-development.html">UX/UI Design</a></li>
-                                                <li><a href="software-maintenance-and-support.html">Software Maintenance and Support</a></li>
+                                                <li><a href="software-maintenance-and-Support.html">Software Maintenance and Support</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                                             <ul class="dropdown-menu" aria-label="Products">
-                                                <li><a href="school-management-software.html">School Management Software</a></li>
-                                                <li><a href="hospital-management-software.html">Hospital Management Software</a></li>
-                                                <li><a href="coaching-crm.html">Coaching CRM</a></li>
+                                                <li><a href="error-404.html">School Management Software</a></li>
+                                                <li><a href="error-404.html">Hospital Management Software</a></li>
+                                                <li><a href="error-404.html">Coaching CRM</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item">
