--- a/custom-software-development.html
+++ b/custom-software-development.html
@@ -130,9 +130,9 @@
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                                             <ul class="dropdown-menu" aria-label="Products">
-                                                <li><a href="school-management-software.html">School Management Software</a></li>
-                                                <li><a href="hospital-management-software.html">Hospital Management Software</a></li>
-                                                <li><a href="coaching-crm.html">Coaching CRM</a></li>
+                                                <li><a href="error-404.html">School Management Software</a></li>
+                                                <li><a href="error-404.html">Hospital Management Software</a></li>
+                                                <li><a href="error-404.html">Coaching CRM</a></li>
                                             </ul>
                                         </li>
                                         <li class="nav-item">
