--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
                                         </div>
                                         <p>AangSoftware has transformed our workflow. Their software solutions are tailored to our needs and have significantly improved our productivity.</p>
                                         <div class="testimonial-caption">
-                                            <h5><a href="#" aria-label="Roxie Payne's testimonial">Roxie Payne</a></h5>
-                                            <label>Manager, Tech Innovations</label>
+                                            <h5><a href="#" aria-label="Roxie Payne's testimonial">Rajesh Sankhar</a></h5>
+                                            <!-- <label>Manager, Tech Innovations</label> -->
                                         </div>
                                     </article>
                                 </div>
@@ -514,8 +514,8 @@
                                         </div>
                                         <p>The team at AangSoftware is exceptional. They understand our business challenges and deliver solutions that really work for us.</p>
                                         <div class="testimonial-caption">
-                                            <h5><a href="#" aria-label="Jackson Vore's testimonial">Jackson Vore</a></h5>
-                                            <label>CEO, Digital Enterprises</label>
+                                            <h5><a href="#" aria-label="Jackson Vore's testimonial">SitaRam Singh</a></h5>
+                                            <!-- <label>CEO, Digital Enterprises</label> -->
                                         </div>
                                     </article>
                                 </div>
@@ -535,8 +535,8 @@
                                         </div>
                                         <p>Thanks to AangSoftware, our client management process has never been smoother. Their CRM solutions are top-notch!</p>
                                         <div class="testimonial-caption">
-                                            <h5><a href="#" aria-label="Breiny Lucy's testimonial">Breiny Lucy</a></h5>
-                                            <label>HR Director, Global Solutions</label>
+                                            <h5><a href="#" aria-label="Breiny Lucy's testimonial">Rohit Kumar Singh</a></h5>
+                                            <!-- <label>HR Director, Global Solutions</label> -->
                                         </div>
                                     </article>
                                 </div>
@@ -552,8 +552,8 @@
                                         </div>
                                         <p>AangSoftware's attention to detail and customer support is outstanding. They are a reliable partner for our software needs.</p>
                                         <div class="testimonial-caption">
-                                            <h5><a href="#" aria-label="Camryn Kay's testimonial">Camryn Kay</a></h5>
-                                            <label>CEO, Innovative Tech Co.</label>
+                                            <h5><a href="#" aria-label="Camryn Kay's testimonial"> Navin Roy</a></h5>
+                                            <!-- <label>CEO, Innovative Tech Co.</label> -->
                                         </div>
                                     </article>
                                 </div>
